--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -82,9 +82,9 @@
 
 <!--КОНЕЦ-->
 {% include 'users/messages.html' %}
-<div class="content-main-block" style="background-image: url({% static '/images/E0dsHx_WYAEiVk4.jpg' %});">
+<div class="content-main-block" >
 <div class="col-md-8 offset-md-2">
-    <body >
+    <body style="background-image: url({% static '/images/E0dsHx_WYAEiVk4.jpg' %});">
     {% block page_content %}{% endblock %}
     </body>
 </div>
