--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -43,13 +43,14 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <a class="nav-link" href="/demo_site/">Кафедры</a>
+                        <a href="/rating" class="nav-link">Статистика и лидеры</a>
                         {% if user.is_authenticated %}
-                            <a class="nav-link" href="{% url 'users:profile' %}">Профиль</a>
                             <form class="top-search d-flex" method=POST action="{% url 'searching' %}">
                                 {% csrf_token %}
                                 <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search" name="searched">
                                 <button class="btn btn-primary" type="submit">Искать</button>
                             </form>
+                            <a class="nav-link" href="{% url 'users:profile' %}">Профиль</a>
                         {% else %}
                             <form class="top-search d-flex" method=POST action="{% url 'searching' %}">
                                 {% csrf_token %}
@@ -58,7 +59,6 @@
                             </form>
                         {% endif %}
                         {% if user.is_authenticated %}
-                            <a class="nav-link">Вы вошли как {{ user.username }}</a>
                             <a class="nav-link" href="/user/logout">Выйти</a>
                         {% else %}
                             <a class="nav-link" href="/user/login">Войти</a>
